# csb

./: .gitignore  .gitmodules  CMakeLists.txt  Docker.ubuntu20  INSTALLING.md  README.markdown  README.md  configure.sh  flake.nix
.github/workflows/: build.yml  ci.yml  nix-build.yml
bindings/python/stp/: CMakeLists.txt  stp.py.in
cmake/modules/: FindGMP.cmake  Findapproxmc.cmake  Findganak.cmake
examples/: bench_1059.smt2  bench_1430.smt2
examples/tests/: CMakeLists.txt
examples/tests/query-files/: CMakeLists.txt
include/stp/: c_interface.h  cpp_interface.h
include/stp/STPManager/: STPManager.h  UserDefinedFlags.h
include/stp/Sat/: ApxMC.h  CMSGen.h  CryptoMinisat5.h  GnK.h  KCBox.h  MinisatCore.h  SATSolver.h  SimplifyingMinisat.h  UniSamp.h
include/stp/Simplifier/: SplitExtracts.h
include/stp/ToSat/: BBNodeAIG.h  ToCNFAIG.h  ToSATAIG.h
lib/: CMakeLists.txt
lib/AbsRefineCounterExample/: CounterExample.cpp
lib/Interface/: CMakeLists.txt  c_interface.cpp  cpp_interface.cpp
lib/Parser/: CMakeLists.txt  smt2.lex  smt2.y
lib/STPManager/: CMakeLists.txt  STP.cpp  STPManager.cpp
lib/Sat/: ApxMC.cpp  CMSGen.cpp  CMakeLists.txt  CryptoMinisat5.cpp  GnK.cpp  KCBox.cpp  MinisatCore.cpp  SimplifyingMinisat.cpp  UniSamp.cpp
lib/Simplifier/: PropagateEqualities.cpp  RemoveUnconstrained.cpp  Rewriting.cpp  Simplifier.cpp  SplitExtracts.cpp
lib/ToSat/: ToCNFAIG.cpp  ToSATAIG.cpp  ToSATBase.cpp
lib/Util/: GitSHA1.cpp.in
lib/extlib-abc/: cnf.h  cnf_short.h
lib/extlib-abc/aig/aig/: aigUtil.c
lib/extlib-abc/aig/cnf/: cnfMan.c  cnfWrite.c
scripts/: build.md  travis-cmake.sh
scripts/fuzz/: simp_fuzz.py
scripts/legacy/: appveyor.yml
scripts/suse/: stp.spec
tests/: CMakeLists.txt
tests/examples/: unconstrained.smt2  unweighted.smt2  weighted_decor.smt2  weighted_projected.smt2
tests/query-files/misc-tests/: neg-weight.smt2
tests/unit-tests/: CMakeLists.txt  bv3_ops_truthtable.h  bvOpsSAT_test.cpp  bvOpsTruthTable_test.cpp
tools/: CMakeLists.txt
tools/rewrite_rule_gen/: rewrite_rule_gen.cpp
tools/stp/: CMakeLists.txt  main.cpp  main_common.cpp
